--- a/languages/job_manager-pt_PT.po
+++ b/languages/job_manager-pt_PT.po
@@ -4,185 +4,198 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager 1.0 Beta 1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2013-06-25 16:39:26+00:00\n"
+"POT-Creation-Date: 2013-06-25 13:52:15+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2013-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2013-06-25 15:38-0000\n"
+"Last-Translator: WordPress Portugal <http;//wp-portugal.com>\n"
+"Language-Team: WordPress Portugal <http://wp-portugal.com>\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language: pt\n"
+"X-Generator: Poedit 1.5.5\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: includes/admin/class-wp-job-manager-admin.php:49
 msgid "Settings"
-msgstr ""
+msgstr "Opções"
 
 #: includes/admin/class-wp-job-manager-cpt.php:67
 msgid "Select a category"
-msgstr ""
+msgstr "Escolha uma categoria"
 
 #: includes/admin/class-wp-job-manager-cpt.php:100
 msgid "Job position title"
-msgstr ""
+msgstr "Posição"
 
 #: includes/admin/class-wp-job-manager-cpt.php:116
 msgid "Job listing updated. <a href=\"%s\">View Job</a>"
-msgstr ""
+msgstr "Anúncio actualizado. <a href=\"%s\">Ver anúncio</a>"
 
 #: includes/admin/class-wp-job-manager-cpt.php:117
 msgid "Custom field updated."
-msgstr ""
+msgstr "Campo personalizado actualizado."
 
 #: includes/admin/class-wp-job-manager-cpt.php:118
 msgid "Custom field deleted."
-msgstr ""
+msgstr "Campo personalizado eliminado."
 
 #: includes/admin/class-wp-job-manager-cpt.php:119
 msgid "Job listing updated."
-msgstr ""
+msgstr "Anúncio actualizado."
 
 #: includes/admin/class-wp-job-manager-cpt.php:120
 msgid "Job listing restored to revision from %s"
-msgstr ""
+msgstr "Anúncio reposto para a revisão de %s"
 
 #: includes/admin/class-wp-job-manager-cpt.php:121
 msgid "Job listing published. <a href=\"%s\">View Job</a>"
-msgstr ""
+msgstr "Anúncio publicado. <a href=\"%s\">Ver anúncio</a>"
 
 #: includes/admin/class-wp-job-manager-cpt.php:122
 msgid "Job listing saved."
-msgstr ""
+msgstr "Anúncio guardado."
 
 #: includes/admin/class-wp-job-manager-cpt.php:123
 msgid "Job listing submitted. <a target=\"_blank\" href=\"%s\">Preview Job</a>"
 msgstr ""
+"Anúncio submetido.  <a target=\"_blank\" href=\"%s\">Pré-visualizar anúncio</"
+"a>"
 
 #: includes/admin/class-wp-job-manager-cpt.php:124
 msgid ""
 "Job listing scheduled for: <strong>%1$s</strong>. <a target=\"_blank\" href="
 "\"%2$s\">Preview Job</a>"
 msgstr ""
+"Anúncio agendado para: <strong>%1$s</strong>. <a target=\"_blank\" href="
+"\"%2$s\">Pré-visualizar anúncio</a>"
 
 #: includes/admin/class-wp-job-manager-cpt.php:125
 msgid "M j, Y @ G:i"
-msgstr ""
+msgstr "j M, Y @ H:i"
 
 #: includes/admin/class-wp-job-manager-cpt.php:126
 msgid ""
 "Job listing draft updated. <a target=\"_blank\" href=\"%s\">Preview Job</a>"
 msgstr ""
+"Rascunho de anúncio actualizado. <a target=\"_blank\" href=\"%2$s\">Pré-"
+"visualizar anúncio</a>"
 
 #: includes/admin/class-wp-job-manager-cpt.php:143
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 #: includes/admin/class-wp-job-manager-cpt.php:144
 msgid "Position"
-msgstr ""
+msgstr "Posição"
 
 #: includes/admin/class-wp-job-manager-cpt.php:145
 msgid "Company"
-msgstr ""
+msgstr "Empresa"
 
 #: includes/admin/class-wp-job-manager-cpt.php:146
 #: templates/content-single-job_listing.php:14
 msgid "Posted"
-msgstr ""
+msgstr "Publicado"
 
 #: includes/admin/class-wp-job-manager-cpt.php:147
 #: templates/job-dashboard.php:9
 msgid "Expires"
-msgstr ""
+msgstr "Expira"
 
 #: includes/admin/class-wp-job-manager-cpt.php:149
 msgid "Categories"
-msgstr ""
+msgstr "Categorias"
 
 #: includes/admin/class-wp-job-manager-cpt.php:150
 msgid "Job Status"
-msgstr ""
+msgstr "Estado"
 
 #: includes/admin/class-wp-job-manager-cpt.php:151
 #: templates/job-dashboard.php:10
 msgid "Filled?"
-msgstr ""
+msgstr "Preenchido?"
 
 #: includes/admin/class-wp-job-manager-cpt.php:152
 msgid "Actions"
-msgstr ""
+msgstr "Acções"
 
 #: includes/admin/class-wp-job-manager-cpt.php:199
 msgid "by a guest"
-msgstr ""
+msgstr "por um convidado"
 
 #: includes/admin/class-wp-job-manager-cpt.php:199
 msgid "by %s"
-msgstr ""
+msgstr "por %s"
 
 #: includes/admin/class-wp-job-manager-cpt.php:212
 msgid "View"
-msgstr ""
+msgstr "Ver"
 
 #: includes/admin/class-wp-job-manager-cpt.php:217
 #: includes/class-wp-job-manager-post-types.php:149
 #: templates/job-dashboard.php:29
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: includes/admin/class-wp-job-manager-cpt.php:222
 #: templates/job-dashboard.php:39
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: includes/admin/class-wp-job-manager-settings.php:31
 #: includes/class-wp-job-manager-post-types.php:125
 msgid "Job Listings"
-msgstr ""
+msgstr "Anúncios"
 
 #: includes/admin/class-wp-job-manager-settings.php:37
 msgid "Jobs per page"
-msgstr ""
+msgstr "Anúncios por página"
 
 #: includes/admin/class-wp-job-manager-settings.php:38
 msgid "How many jobs should be shown per page by default?"
-msgstr ""
+msgstr "Quantos anúncios devem ser mostrados por página, por omissão?"
 
 #: includes/admin/class-wp-job-manager-settings.php:43
 msgid "Filled positions"
-msgstr ""
+msgstr "Posições preenchidas"
 
 #: includes/admin/class-wp-job-manager-settings.php:44
 msgid "Hide filled positions"
-msgstr ""
+msgstr "Esconder posições preenchidas"
 
 #: includes/admin/class-wp-job-manager-settings.php:45
 msgid "If enabled, filled positions will be hidden from the job list."
-msgstr ""
+msgstr "Se activo, as posições preenchidas serão escondidas da lista."
 
 #: includes/admin/class-wp-job-manager-settings.php:51
 msgid "Job categories"
-msgstr ""
+msgstr "Categorias de anúncios"
 
 #: includes/admin/class-wp-job-manager-settings.php:52
 msgid "Enable job categories"
-msgstr ""
+msgstr "Activar categorias de anúncios"
 
 #: includes/admin/class-wp-job-manager-settings.php:53
 msgid ""
 "Choose whether to enable job categories. Categories must be setup by an "
 "admin for users to choose during job submission."
 msgstr ""
+"Escolha se quer activar as categorías de anúncios. As categorías deverão ser "
+"criadas por um administrador para que os utilizadores as possam escolher "
+"aquando da submissão de um anúncio."
 
 #: includes/admin/class-wp-job-manager-settings.php:59
 msgid "Job Submission"
-msgstr ""
+msgstr "Submissão de anúncio"
 
 #: includes/admin/class-wp-job-manager-settings.php:64
 msgid "Account creation"
-msgstr ""
+msgstr "Criação de conta"
 
 #: includes/admin/class-wp-job-manager-settings.php:65
 msgid "Allow account creation"
-msgstr ""
+msgstr "Permitir a criação de conta"
 
 #: includes/admin/class-wp-job-manager-settings.php:66
 msgid ""
@@ -192,7 +205,7 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:72
 msgid "Account required"
-msgstr ""
+msgstr "Conta obrigatória"
 
 #: includes/admin/class-wp-job-manager-settings.php:73
 msgid "Job submission requires an account"
@@ -782,9 +795,9 @@ msgstr ""
 msgid "WP Job Manager"
 msgstr ""
 
-#. #-#-#-#-#  job_manager.pot (WP Job Manager 1.0 Beta 1)  #-#-#-#-#
+#. #-#-#-#-#  wp-job-manager.pot (WP Job Manager 1.0 Beta 1)  #-#-#-#-#
 #. Plugin URI of the plugin/theme
-#. #-#-#-#-#  job_manager.pot (WP Job Manager 1.0 Beta 1)  #-#-#-#-#
+#. #-#-#-#-#  wp-job-manager.pot (WP Job Manager 1.0 Beta 1)  #-#-#-#-#
 #. Author URI of the plugin/theme
 msgid "http://mikejolley.com"
 msgstr ""
