--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager 1.12.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2014-06-01 13:06:53+00:00\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
+"POT-Creation-Date: 2014-06-03 22:00:09+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
