--- a/languages/wp-job-manager-nb_NO.po
+++ b/languages/wp-job-manager-nb_NO.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
 "PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: mikejolley <mike.jolley@me.com>\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Norwegian Bokmål (Norway) (http://www.transifex.com/projects/p/wp-job-manager/language/nb_NO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
