--- a/languages/wp-job-manager-pt_BR.po
+++ b/languages/wp-job-manager-pt_BR.po
@@ -1,8 +1,8 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
-# claudiosmweb <contato@claudiosmweb.com>, 2014
-# mikejolley <mike.jolley@me.com>, 2014
+# Claudio Sanches <contato@claudiosmweb.com>, 2014
+# Mike Jolley <mike.jolley@me.com>, 2014
 # vmassuchetto <vmassuchetto@gmail.com>, 2014
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
 "PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: mikejolley <mike.jolley@me.com>\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/wp-job-manager/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
