--- a/languages/wp-job-manager-pt_PT.po
+++ b/languages/wp-job-manager-pt_PT.po
@@ -1,16 +1,16 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
-# zedejose <jfontainhas@gmail.com>, 2014
-# mikejolley <mike.jolley@me.com>, 2014
-# nalvesrpd <nuno@raulpinadesign.pt>, 2014
+# Zé Fontainhas <jfontainhas@gmail.com>, 2014
+# Mike Jolley <mike.jolley@me.com>, 2014
+# Nuno Alves <nuno@raulpinadesign.pt>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
 "PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: mikejolley <mike.jolley@me.com>\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/wp-job-manager/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
