--- a/languages/wp-job-manager-af.po
+++ b/languages/wp-job-manager-af.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2014-07-01 07:14+0000\n"
+"Last-Translator: Riaan\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/wp-job-manager/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -446,7 +446,7 @@ msgstr "Navraag limiet bereik"
 #: includes/class-wp-job-manager-geocode.php:153
 #: includes/class-wp-job-manager-geocode.php:157
 msgid "Geocoding error"
-msgstr ""
+msgstr "Fout gevind in geo-kodering"
 
 #: includes/class-wp-job-manager-install.php:39
 msgid "Employer"
