--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager 1.14.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
-"POT-Creation-Date: 2014-08-05 20:23:45+00:00\n"
+"POT-Creation-Date: 2014-08-10 12:54:37+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -906,7 +906,7 @@ msgid ""
 msgstr ""
 
 #: templates/job-submit.php:35
-msgid "Company details"
+msgid "Company Details"
 msgstr ""
 
 #: templates/job-submitted.php:6
